// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders login page correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "white",
        "flex": 1,
      },
    ]
  }
>
  <Image
    source={
      Object {
        "testUri": "../../../frontend/assets/images/logo2.png",
      }
    }
    style={
      Object {
        "alignSelf": "center",
        "height": 248,
        "marginTop": "12%",
        "width": 200,
      }
    }
  />
  <Text
    style={
      Array [
        Object {
          "color": "#F15763",
          "fontFamily": "CircularStd-Medium",
        },
        Object {
          "fontSize": 45,
          "textAlign": "center",
        },
        Object {
          "fontFamily": "CircularStd-Bold",
          "fontSize": 30,
          "fontWeight": "bold",
          "marginBottom": "10%",
          "marginTop": "2.5%",
        },
      ]
    }
  >
    Let's Get Chews-ing!
  </Text>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignSelf": "center",
          "borderRadius": 30,
          "borderWidth": 2.5,
          "paddingHorizontal": 12,
          "paddingVertical": 5,
          "width": "70%",
        },
        Object {
          "backgroundColor": "#F15763",
          "borderColor": "#F15763",
          "marginTop": "7%",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignSelf": "center",
          "flexDirection": "row",
        }
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 12,
            },
            Array [
              Object {
                "alignSelf": "center",
                "color": "#F15763",
                "fontFamily": "CircularStd-Medium",
                "fontSize": 35,
              },
              Object {
                "color": "white",
                "fontSize": 22,
                "marginRight": "5%",
              },
            ],
            Object {
              "fontFamily": "FontAwesome",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
      <Text
        style={
          Array [
            Object {
              "alignSelf": "center",
              "fontFamily": "CircularStd-Book",
              "fontSize": 18,
              "fontWeight": "normal",
            },
            Object {
              "color": "white",
            },
          ]
        }
      >
        Login with Phone
      </Text>
    </View>
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignSelf": "center",
          "borderRadius": 30,
          "borderWidth": 2.5,
          "paddingHorizontal": 12,
          "paddingVertical": 5,
          "width": "70%",
        },
        Object {
          "backgroundColor": "#3b5998",
          "borderColor": "#3b5998",
          "marginTop": "7%",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignSelf": "center",
          "flexDirection": "row",
        }
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 12,
            },
            Array [
              Object {
                "alignSelf": "center",
                "color": "#F15763",
                "fontFamily": "CircularStd-Medium",
                "fontSize": 35,
              },
              Object {
                "color": "white",
                "fontSize": 22,
                "marginRight": "5%",
              },
            ],
            Object {
              "fontFamily": "FontAwesome",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
      <Text
        style={
          Array [
            Object {
              "alignSelf": "center",
              "fontFamily": "CircularStd-Book",
              "fontSize": 18,
              "fontWeight": "normal",
            },
            Object {
              "color": "white",
            },
          ]
        }
      >
        Login with Facebook
      </Text>
    </View>
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "#F15763",
          "fontFamily": "CircularStd-Medium",
        },
        Object {
          "alignSelf": "center",
          "fontFamily": "CircularStd-Book",
          "fontSize": 13,
          "lineHeight": 17,
          "marginHorizontal": "15%",
          "marginTop": "7.5%",
          "textAlign": "center",
        },
      ]
    }
  >
    By clicking log in, you agree with our Terms and Conditions.
  </Text>
</View>
`;

exports[`renders login with Facebook alert 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "white",
        "flex": 1,
      },
    ]
  }
>
  <Image
    source={
      Object {
        "testUri": "../../../frontend/assets/images/logo2.png",
      }
    }
    style={
      Object {
        "alignSelf": "center",
        "height": 248,
        "marginTop": "12%",
        "width": 200,
      }
    }
  />
  <Text
    style={
      Array [
        Object {
          "color": "#F15763",
          "fontFamily": "CircularStd-Medium",
        },
        Object {
          "fontSize": 45,
          "textAlign": "center",
        },
        Object {
          "fontFamily": "CircularStd-Bold",
          "fontSize": 30,
          "fontWeight": "bold",
          "marginBottom": "10%",
          "marginTop": "2.5%",
        },
      ]
    }
  >
    Let's Get Chews-ing!
  </Text>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignSelf": "center",
          "borderRadius": 30,
          "borderWidth": 2.5,
          "paddingHorizontal": 12,
          "paddingVertical": 5,
          "width": "70%",
        },
        Object {
          "backgroundColor": "#F15763",
          "borderColor": "#F15763",
          "marginTop": "7%",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignSelf": "center",
          "flexDirection": "row",
        }
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 12,
            },
            Array [
              Object {
                "alignSelf": "center",
                "color": "#F15763",
                "fontFamily": "CircularStd-Medium",
                "fontSize": 35,
              },
              Object {
                "color": "white",
                "fontSize": 22,
                "marginRight": "5%",
              },
            ],
            Object {
              "fontFamily": "FontAwesome",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
      <Text
        style={
          Array [
            Object {
              "alignSelf": "center",
              "fontFamily": "CircularStd-Book",
              "fontSize": 18,
              "fontWeight": "normal",
            },
            Object {
              "color": "white",
            },
          ]
        }
      >
        Login with Phone
      </Text>
    </View>
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignSelf": "center",
          "borderRadius": 30,
          "borderWidth": 2.5,
          "paddingHorizontal": 12,
          "paddingVertical": 5,
          "width": "70%",
        },
        Object {
          "backgroundColor": "#3b5998",
          "borderColor": "#3b5998",
          "marginTop": "7%",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignSelf": "center",
          "flexDirection": "row",
        }
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": undefined,
              "fontSize": 12,
            },
            Array [
              Object {
                "alignSelf": "center",
                "color": "#F15763",
                "fontFamily": "CircularStd-Medium",
                "fontSize": 35,
              },
              Object {
                "color": "white",
                "fontSize": 22,
                "marginRight": "5%",
              },
            ],
            Object {
              "fontFamily": "FontAwesome",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
      <Text
        style={
          Array [
            Object {
              "alignSelf": "center",
              "fontFamily": "CircularStd-Book",
              "fontSize": 18,
              "fontWeight": "normal",
            },
            Object {
              "color": "white",
            },
          ]
        }
      >
        Login with Facebook
      </Text>
    </View>
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "#F15763",
          "fontFamily": "CircularStd-Medium",
        },
        Object {
          "alignSelf": "center",
          "fontFamily": "CircularStd-Book",
          "fontSize": 13,
          "lineHeight": 17,
          "marginHorizontal": "15%",
          "marginTop": "7.5%",
          "textAlign": "center",
        },
      ]
    }
  >
    By clicking log in, you agree with our Terms and Conditions.
  </Text>
  <View>
    <Text />
    <BlurView
      blurAmount={20}
      blurType="light"
      reducedTransparencyFallbackColor="white"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          Object {
            "bottom": 0,
            "elevation": 99,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": 99,
          },
        ]
      }
    />
    <Modal
      animationType="none"
      hardwareAccelerated={false}
      transparent={true}
      visible={true}
    >
      <View
        style={
          Array [
            Object {
              "alignSelf": "center",
              "backgroundColor": "white",
              "borderRadius": 15,
              "elevation": 100,
              "justifyContent": "space-evenly",
              "margin": "50%",
              "width": "80%",
              "zIndex": 100,
            },
            Object {
              "height": "25%",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-end",
            }
          }
        >
          <Text
            allowFontScaling={false}
            onPress={[Function]}
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 12,
                },
                Object {
                  "color": "#F15763",
                  "fontFamily": "CircularStd-Medium",
                  "fontSize": 21,
                  "marginRight": "5%",
                  "marginTop": "5%",
                },
                Object {
                  "fontFamily": "anticon",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "space-evenly",
            }
          }
        >
          <View
            style={
              Object {
                "marginLeft": "10%",
                "marginRight": "10%",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#F15763",
                  "fontFamily": "CircularStd-Medium",
                  "fontSize": 20,
                  "fontWeight": "bold",
                  "marginBottom": "3%",
                }
              }
            >
              Open "Facebook?"
            </Text>
            <Text
              style={
                Object {
                  "fontFamily": "CircularStd-Medium",
                  "fontSize": 15,
                  "marginLeft": "2%",
                }
              }
            >
              You will be directed to the Facebook app for account verification
            </Text>
          </View>
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "alignSelf": "center",
                    "borderColor": "#F15763",
                    "borderRadius": 60,
                    "borderWidth": 1.5,
                    "margin": "3%",
                    "width": "35%",
                  },
                  Object {
                    "marginBottom": "3%",
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "fontFamily": "CircularStd-Medium",
                      "fontSize": 20,
                      "paddingBottom": "5%",
                      "paddingTop": "5%",
                      "textAlign": "center",
                    },
                    Object {
                      "color": "#F15763",
                    },
                  ]
                }
              >
                Open
              </Text>
            </View>
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "alignSelf": "center",
                    "borderColor": "#F15763",
                    "borderRadius": 60,
                    "borderWidth": 1.5,
                    "margin": "3%",
                    "width": "35%",
                  },
                  Object {
                    "backgroundColor": "#F15763",
                    "marginBottom": "3%",
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "fontFamily": "CircularStd-Medium",
                      "fontSize": 20,
                      "paddingBottom": "5%",
                      "paddingTop": "5%",
                      "textAlign": "center",
                    },
                    Object {
                      "color": "white",
                    },
                  ]
                }
              >
                Go Back
              </Text>
            </View>
          </View>
        </View>
      </View>
    </Modal>
  </View>
</View>
`;
